--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -19,10 +19,11 @@ jobs:
 
     - name: Install dependices
       run: |
+        python -m pip install build wheels
         python -m pip install -r requirements.txt
     - name: Build a binary wheel and a source tarball
       run: >-
-        python3 -m build .
+        python3 -m build
 
     - name: Publish package distributions to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
