--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -19,9 +19,9 @@ jobs:
 
     - name: Install dependices
       run: |
-        python -m pip install build wheels
+        python -m pip install build
         python -m pip install -r requirements.txt
-    - name: Build a binary wheel and a source tarball
+    - name: Build a package
       run: >-
         python3 -m build
 
