We don't actually support mac's

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ author_email = robert.j.farmer37@gmail.com
 url = https://github.com/rjfarmer/pyMesa
 license = GPLv2+
 license_files = COPYING.txt
-platforms = unix, linux, osx
+platforms = unix, linux
 
 classifiers =
     Programming Language :: Python :: 3
